# RAGBot

./: .env.example  README.md  app.py  ingest.py  pyproject.toml
src/ragbot/embeddings/: __init__.py  huggingface_embeddings.py
src/ragbot/llms/: __init__.py  openrouter_llm.py
src/ragbot/node_parsers/: __init__.py  sentence_splitter.py
src/ragbot/prompts/: __init__.py  default_prompt.py
src/ragbot/readers/: data_faq_reader.py
src/ragbot/settings/: __init__.py  settings.py
src/ragbot/storage/: __init__.py  storage_context.py
src/ragbot/transformations/: __init__.py  text_cleaner.py
src/ragbot/workflows/: rag_workflow.py
